chore: :see_no_evil: Update .vscodeignore

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -12,3 +12,15 @@ vsc-extension-quickstart.md
 **/*.map
 **/*.ts
 **/.vscode-test.*
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+#dotenv-vault
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
